<resources>
    <string name="app_name">Udacity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_sort">Sort</string>

    <string name="nanodegree_app">My Nanodegree Apps!</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Super Duo</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">Capstone</string>

    <string name="button_click_toast">This button will launch %s</string>
    <string name="title_activity_popular_movies">Popular Movies</string>
    <string name="title_activity_settings">Settings</string>


    <!-- Strings related to Settings -->

    <!-- START: General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_sort_order">Sort Order</string>
    <string name="pref_title_sort_order_summary">Sets the sort order for movies</string>

    <string-array name="pref_sort_order_list_titles">
        <item>Most Popular</item>
        <item>Highest-rated</item>
        <item>Favourites</item>
    </string-array>
    <string-array name="pref_sort_order_list_values">
        <item>popular</item>
        <item>top_rated</item>
        <item>fav</item>
    </string-array>
    <string name="pref_sort_order_default">popular</string>
    <!-- END: General settings -->

    <string name="title_activity_movie_detail">Movie Detail</string>
    <string name="no_data">No Data Available</string>
    <string name="empty_string"></string>
    <string name="unable_to_play">Unable to play the Trailer. Please try again.</string>
    <string name="added_to_fav">Added to Favourites</string>
    <string name="removed_from_fav">Removed from Favourites</string>
    <string name="review_template">%s says,</string>
    <string name="reviews_title">Reviews:</string>
    <string name="review_title">Review</string>
    <string name="close">Close</string>

</resources>
