<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/nanodegree_app"
        android:textSize="20sp" />

    <Button
        android:id="@+id/spotify_streamer"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:background="@color/button_orange"
        android:text="@string/spotify_streamer" />

    <Button
        android:id="@+id/scorer_app"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spotify_streamer"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:background="@color/button_orange"
        android:text="@string/scores_app" />

    <Button
        android:id="@+id/library_app"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scorer_app"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:background="@color/button_orange"
        android:text="@string/library_app" />

    <Button
        android:id="@+id/build_it_bigger"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/library_app"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:background="@color/button_orange"
        android:text="@string/build_it_bigger" />

    <Button
        android:id="@+id/xyz_reader"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/build_it_bigger"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:background="@color/button_orange"
        android:text="@string/xyz_reader" />

    <Button
        android:id="@+id/capstone"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/xyz_reader"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:background="@color/button_red"
        android:textColor="@android:color/white"
        android:text="@string/capstone" />

</RelativeLayout>
